TL-800. Add MySQL protocol.

--- a/search/Makefile
+++ b/search/Makefile
@@ -8,6 +8,7 @@ run:
 	@pipenv run python search/server.py
 
 test:
+	@pipenv run python setup.py install
 	@pipenv run pytest -x
 
 .PHONY: default run test
