--- a/search/Makefile
+++ b/search/Makefile
@@ -4,11 +4,12 @@ install:
 	@pipenv install
 
 run:
-	@pipenv run python setup.py install
-	@pipenv run python search/server.py
+	@pipenv run uvicorn search.main:app --reload
 
 test:
-	@pipenv run python setup.py install
 	@pipenv run pytest -x
+
+black:
+	@pipenv run black -l 79 .
 
 .PHONY: default run test
