--- a/search/Pipfile
+++ b/search/Pipfile
@@ -4,17 +4,19 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-aiohttp = "*"
 envparse = "*"
 pytest = "*"
-pytest-aiohttp = "*"
-uvloop = "*"
 sentry-sdk = "==0.7.9"
+fastapi = "*"
+uvicorn = "*"
+pydantic = "*"
+databases = {extras = ["mysql"],version = "*"}
 Sphinx = "*"
-aiohttp-swagger = "*"
-aiomysql = "*"
+sphinxcontrib-openapi = "*"
+aiohttp = "*"
 
 [dev-packages]
+black = "*"
 isort = "*"
 pylint = "*"
 "flake8" = "*"
