--- a/sphinxsearch/sphinx.conf
+++ b/sphinxsearch/sphinx.conf
@@ -1,63 +1,33 @@
 # Sources
 ## Databases
-source custodian_source
+source test_source
 {
     type = pgsql
     sql_host = postgres
     sql_user = postgres
     sql_pass = postgres
-    sql_db = custodian
+    sql_db = postgres
     sql_port = 5432
 }
 
-source files_source
-{
-    type = pgsql
-    sql_host = postgres
-    sql_user = postgres
-    sql_pass = postgres
-    sql_db = files
-    sql_port = 5432
-}
 ## Tables
-source article_source:custodian_source
+source test_text_source:test_source
 {
     sql_query = \
-        SELECT int_id as id, id as text_id, title, text, preview_description \
-        FROM o_article
+        SELECT id, text \
+        FROM bigtext
 
     sql_ranged_throttle = 0
-    sql_field_string = text_id
-    sql_field_string = title
     sql_field_string = text
-    sql_field_string = preview_description
-}
-
-source space_source:custodian_source
-{
-    sql_query = \
-        SELECT id, title \
-        FROM o_space
-
-    sql_ranged_throttle = 0
-    sql_field_string = title
-}
-
-source file_source:files_source
-{
-    sql_query = \
-        SELECT source_id, content \
-        FROM files_filetextcontent
-
-    sql_ranged_throttle = 0
-    sql_field_string = content
 }
 
 # Indexes
-index article_index
+index rt_test_text_index
 {
-    source = article_source
-    path = /var/lib/sphinxsearch/data/arcticle
+    type = rt
+    path = /var/lib/sphinxsearch/data/rt_test_text
+    rt_attr_uint = guid
+    rt_field = text
     docinfo = extern
     mlock = 0
     morphology = stem_enru
@@ -68,24 +38,10 @@ index article_index
     html_strip = 1
 }
 
-index space_index
+index test_text_index
 {
-    source = space_source
-    path = /var/lib/sphinxsearch/data/space
-    docinfo = extern
-    mlock = 0
-    morphology = stem_enru
-    index_exact_words = 1
-    charset_table = 0..9, A..Z->a..z, _, a..z, U+410..U+42F->U+430..U+44F, U+430..U+44F
-    min_word_len = 1
-    min_infix_len = 1
-    html_strip = 1
-}
-
-index file_index
-{
-    source = file_source
-    path = /var/lib/sphinxsearch/data/file
+    source = test_text_source
+    path = /var/lib/sphinxsearch/data/test_text
     docinfo = extern
     mlock = 0
     morphology = stem_enru
@@ -105,7 +61,7 @@ indexer
 # Search daemon
 searchd
 {
-    listen = 9307:http
+    listen = 9306:mysql41
     log	= /var/log/sphinxsearch/searchd.log
     query_log = /var/log/sphinxsearch/query.log
     read_timeout = 5
