--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,22 +10,30 @@ services:
     container_name: search
     restart: always
     environment:
-      DEBUG: "False"
-      HOST: "0.0.0.0"
-      PORT: 8080
-      SECRET_KEY: "548ab8296ff44d2f954c17d850833af1"
-      SPHINX_URL: "http://sphinxsearch:9307/"
-      AUTH_URL: "http://auth.trood.com/"
-      AUTH_DOMAIN: "SEARCH"
-      AUTH_SECRET: "b1b4a229c0cb5865f67f0626dc9c184526dc6dd99f8f505b14d1c95739d523dfcfaa17534ea160364fe27e10e6c331a1c231f60be581e69fed4f5bf9c4dfdadb"
-      SENTRY_ENABLED: "False"
-      SENTRY_DSN: "https://42d08b480e6c4171a19c5c61cea98c0f:4bfb7897b15a4df4b31133bd02d8aff3@sentry.tools.trood.ru/5"
+      SPHINX_DB: "mysql://sphinxsearch:9306/"
     volumes:
       - ./search:/app
     networks:
       - search_net
     ports:
-      - "8030:8080"
+      - "8000:8000"
+  
+  sphinxsearch:
+    image: registry.tools.trood.ru/sphinxsearch:${TAG_NAME:-dev}
+    build:
+      context: ./sphinxsearch
+      dockerfile: Dockerfile
+    container_name: sphinxsearch
+    restart: always
+    depends_on:
+      - postgres
+    volumes:
+      - ./sphinxsearch/sphinx.conf:/etc/sphinxsearch/sphinx.conf
+      - ./sphinxsearch/data:/var/lib/sphinxsearch/data
+    networks:
+      - search_net
+    ports:
+      - "9306:9306"
 
   postgres:
     image: postgres:10.5
@@ -43,22 +51,20 @@ services:
     networks:
       - search_net
   
-  sphinxsearch:
-    image: registry.tools.trood.ru/sphinxsearch:${TAG_NAME:-dev}
-    build:
-      context: ./sphinxsearch
-      dockerfile: Dockerfile
-    container_name: sphinxsearch
+  pgadmin:
+    container_name: pgadmin
+    image: dpage/pgadmin4:latest
     restart: always
-    depends_on:
-      - postgres
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@trood.com
+      PGADMIN_DEFAULT_PASSWORD: tcp.trood.com
     volumes:
-      - ./sphinxsearch/sphinx.conf:/etc/sphinxsearch/sphinx.conf
-      - ./sphinxsearch/data:/var/lib/sphinxsearch/data
+      - ./pgadmin:/var/lib/pgadmin
+      - ./pgadmin/servers.json:/servers.json
+    ports:
+      - "5455:80"
     networks:
       - search_net
-    ports:
-      - "9307:9307"
 
 networks:
   search_net:
