--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,13 @@ services:
     container_name: search
     restart: always
     environment:
+      AUTH_URL: "http://auth:8000"
+      AUTH_DOMAIN: "SEARCH"
+      AUTH_SECRET: "b1b4a229c0cb5865f67f0626dc9c184526dc6dd99f8f505b14d1c95739d523dfcfaa17534ea160364fe27e10e6c331a1c231f60be581e69fed4f5bf9c4dfdadb"
+      WHITE_URLS: ""
       SPHINX_DB: "mysql://sphinxsearch:9306/"
+      SENTRY_ENABLED: True
+      SENTRY_DSN: "https://e596af21d20d4fca8867a727b0003b47:d9ae422ff66e42138fba31a64f1414eb@sentry.tools.trood.ru/7"
     volumes:
       - ./search:/app
     networks:
