Add backward compatibility with previous version.

--- a/sphinxsearch/sphinx.conf
+++ b/sphinxsearch/sphinx.conf
@@ -62,6 +62,7 @@ indexer
 searchd
 {
     listen = 9306:mysql41
+    listen = 9307:http
     log	= /var/log/sphinxsearch/searchd.log
     query_log = /var/log/sphinxsearch/query.log
     read_timeout = 5
