--- a/sphinxsearch/sphinx.conf
+++ b/sphinxsearch/sphinx.conf
@@ -17,17 +17,27 @@ source test_text_source:test_source
         SELECT id, text \
         FROM bigtext
 
-    sql_ranged_throttle = 0
+    # sql_query = \
+    #     SELECT id, text \
+    #     FROM bigtext \
+    #     WHERE id between $start and $end
+
+    # sql_range_step = 250
+    # Delay in milliseconds
+    sql_ranged_throttle = 100
     sql_field_string = text
 }
 
 # Indexes
 index rt_test_text_index
 {
+    # Real time index flag
     type = rt
     path = /var/lib/sphinxsearch/data/rt_test_text
     rt_attr_uint = guid
     rt_field = text
+    rt_attr_string = text
+    
     docinfo = extern
     mlock = 0
     morphology = stem_enru
@@ -38,7 +48,7 @@ index rt_test_text_index
     html_strip = 1
 }
 
-index test_text_index
+index main_test_text_index
 {
     source = test_text_source
     path = /var/lib/sphinxsearch/data/test_text
@@ -52,6 +62,14 @@ index test_text_index
     html_strip = 1
 }
 
+index test_text_index
+{
+    # Distributed index flag
+    type = distributed
+    local = main_test_text_index
+    local = rt_test_text_index
+}
+
 # Indexer application
 indexer
 {
@@ -62,7 +80,6 @@ indexer
 searchd
 {
     listen = 9306:mysql41
-    listen = 9307:http
     log	= /var/log/sphinxsearch/searchd.log
     query_log = /var/log/sphinxsearch/query.log
     read_timeout = 5
