--- a/sphinxsearch/example_main_sphinx.conf
+++ b/sphinxsearch/example_main_sphinx.conf
@@ -1,12 +1,33 @@
-# Indexes
-index rt_tbl_index
+# Sources
+## Databases
+source main_source
 {
-    type = rt
-    path = /var/lib/sphinxsearch/data/rt_tbl_index
-    rt_attr_uint = guid
-    rt_field = text
-    rt_field = updated
-    rt_attr_string = text   
+    type = pgsql
+    sql_host = postgres
+    sql_user = postgres
+    sql_pass = postgres
+    sql_db = custodian
+    sql_port = 5432
+}
+
+## Tables
+source main_index_source:main_source
+{
+    sql_query = \
+        SELECT id, text \
+        FROM o_tbl
+
+    # sql_range_step = 250
+    # Delay in milliseconds
+    sql_ranged_throttle = 100
+    sql_field_string = text
+}
+
+# Indexes
+index main_tbl_index
+{
+    source = main_source
+    path = /var/lib/sphinxsearch/data/main_tbl_index
     docinfo = extern
     mlock = 0
     morphology = stem_enru
@@ -15,12 +36,6 @@ index rt_tbl_index
     min_word_len = 1
     min_infix_len = 1
     html_strip = 1
-}
-
-index tbl_index
-{
-    type = distributed
-    local = rt_tbl_index
 }
 
 # Indexer application
