--- a/search/Pipfile
+++ b/search/Pipfile
@@ -14,6 +14,7 @@ databases = {extras = ["mysql"],version = "*"}
 Sphinx = "*"
 sphinxcontrib-openapi = "*"
 aiohttp = "*"
+pytest-asyncio = "*"
 
 [dev-packages]
 black = "*"
