Set index from env

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,13 +10,13 @@ services:
     container_name: search
     restart: always
     environment:
-      AUTH_URL: "http://auth:8000"
+      AUTH_URL: "AUTH_URL"
       AUTH_DOMAIN: "SEARCH"
-      AUTH_SECRET: "b1b4a229c0cb5865f67f0626dc9c184526dc6dd99f8f505b14d1c95739d523dfcfaa17534ea160364fe27e10e6c331a1c231f60be581e69fed4f5bf9c4dfdadb"
+      AUTH_SECRET: "AUTH_SECRET"
       WHITE_URLS: ""
       SPHINX_DB: "mysql://sphinxsearch:9306/"
-      SENTRY_ENABLED: "True"
-      SENTRY_DSN: "https://e596af21d20d4fca8867a727b0003b47:d9ae422ff66e42138fba31a64f1414eb@sentry.tools.trood.ru/7"
+      SENTRY_ENABLED: "False"
+      SENTRY_DSN: "YOUR_DNS_HERE"
     volumes:
       - ./search:/app
     networks:
@@ -31,9 +31,17 @@ services:
       dockerfile: Dockerfile
     container_name: sphinxsearch
     restart: always
-    volumes:
-      - ./sphinxsearch/sphinx.conf:/etc/sphinxsearch/sphinx.conf
-      - ./sphinxsearch/data:/var/lib/sphinxsearch/data
+    environment:
+      SQL_QUERY: "SQL query should contain id"
+      SQL_ATTR_BOOL: "attrs, separated, with, comma"
+      SQL_ATTR_UINT: "attrs, separated, with, comma"
+      SQL_FIELD_STRING: "attrs, separated, with, comma"
+      INDEX_NAME: "INDEX_NAME"
+      DB_USER: "DB_USER"
+      DB_PASSWORD: "DB_PASSWORD"
+      DB_HOST: "DB_PASSWORD"
+      DB_NAME: "DB_PASSWORD"
+      DB_PORT: "5432"
     networks:
       - search_net
     ports:
