--- a/sphinxsearch/sphinx.conf
+++ b/sphinxsearch/sphinx.conf
@@ -1,12 +1,30 @@
-# Indexes
-index rt_tbl_index
-{
-    type = rt
-    path = /var/lib/sphinxsearch/data/rt_tbl_index
-    rt_attr_uint = guid
-    rt_field = text
-    rt_field = updated
-    rt_attr_string = text   
+#!/usr/bin/env python3
+import os
+
+sphinx_config_template = """
+source {db_name}_db
+{{
+    type = pgsql
+    sql_host = {host}
+    sql_user = {user}
+    sql_pass = {password}
+    sql_db = {db_name}
+    sql_port = {port}
+}}
+
+source {index_name}_table:{db_name}_db
+{{
+
+    sql_query = {sql_query}
+
+{attrs}
+
+}}
+
+index {index_name}_index
+{{
+    source = {index_name}_table
+    path = /var/lib/sphinxsearch/data/{index_name}
     docinfo = extern
     mlock = 0
     morphology = stem_enru
@@ -15,23 +33,15 @@ index rt_tbl_index
     min_word_len = 1
     min_infix_len = 1
     html_strip = 1
-}
+}}
 
-index tbl_index
-{
-    type = distributed
-    local = rt_tbl_index
-}
-
-# Indexer application
 indexer
-{
+{{
     mem_limit = 256M
-}
+}}
 
-# Search daemon
 searchd
-{
+{{
     listen = 9306:mysql41
     log	= /var/log/sphinxsearch/searchd.log
     query_log = /var/log/sphinxsearch/query.log
@@ -45,4 +55,29 @@ searchd
     workers	= thread_pool
     binlog_path	= /var/lib/sphinxsearch/data
     watchdog = 1
+}}
+
+"""
+
+
+sql_attrs = ["SQL_ATTR_BOOL", "SQL_ATTR_UINT", "SQL_FIELD_STRING"]
+
+attrs = "" 
+for env in sql_attrs: 
+    for a in [a.strip() for a in os.environ.get(env).split(",")]: 
+        attrs += """    {0} = {1}
+        """.format(env.lower(), a)
+
+sphinx_config = {
+    "db_name": os.environ.get("DB_NAME"),
+    "host": os.environ.get("DB_HOST"),
+    "user": os.environ.get("DB_USER"),
+    "password": os.environ.get("DB_PASSWORD"),
+    "port": os.environ.get("DB_PORT", 5432),
+    "sql_query": os.environ.get("SQL_QUERY"),
+    "index_name": os.environ.get("INDEX_NAME"),
+    "attrs": attrs
+
 }
+
+print(sphinx_config_template.format(**sphinx_config))
